--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -31,3 +31,12 @@ spring:
 logging:
   level:
     org.springframework.security: DEBUG
+# Enabling H2 Console
+#spring.h2.console.enabled: true
+#spring.h2.console.path: /h2-console
+spring.datasource.url: jdbc:h2:mem:testdb
+spring.datasource.driverClassName: org.h2.Driver
+spring.datasource.username: sa
+spring.datasource.password:
+
+spring.jpa.database-platform: org.hibernate.dialect.H2Dialect
